--- a/style.css
+++ b/style.css
@@ -26,13 +26,12 @@
 }
 
 body{
-    min-height: 2024px;
+    min-height: 1955px;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    display: grid;
+    place-items: center;
+    grid-template-rows: 100% 1fr;
     background-color: var(--Stone-100);
 }
 
@@ -89,7 +88,7 @@ h2{
         border-radius: 9.6px;
         background-color: var(--Ros-50);
 
-        .title--time{
+        .title-time{
             margin-bottom: 16px;
             margin-top: 1px;
             font-size: 20px;
@@ -98,7 +97,7 @@ h2{
             color: var(--Rose-800);
         }
 
-        .list--time{
+        .list-time{
             margin-left: 24px;
         }
 
@@ -120,7 +119,7 @@ h2{
             margin: 26px 0 20px 0;
         }
 
-        .list--ingredient{
+        .list-ingredient{
             margin-left: 25px;
             color: var(--Brown-800);
         }
@@ -143,7 +142,7 @@ h2{
             margin: 49px 0 17px 0;
         }
 
-        .list--intructions{
+        .list-intructions{
             margin-left: 25px;
         }
 
@@ -259,9 +258,5 @@ h2{
         max-width: none;
         width: 100%;
         padding: 0;
-    }
-
-    .content{
-        padding: 0 20px 0 20px;
     }
 }
